# sistemaDomotico

./: CMakeLists.txt  README.txt
include/: Controller.h  Device.h  DeviceCP.h  DeviceM.h  Logger.h
src/: Controller.cpp  Device.cpp  DeviceCP.cpp  DeviceM.cpp  Logger.cpp  main.cpp
